@@ -90,6 +90,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|http
+operator|.
+name|impl
+operator|.
+name|conn
+operator|.
+name|SchemeRegistryFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|client
@@ -258,7 +274,12 @@ name|clientConnectionManager
 operator|=
 operator|new
 name|PoolingClientConnectionManager
+argument_list|(
+name|SchemeRegistryFactory
+operator|.
+name|createSystemDefault
 argument_list|()
+argument_list|)
 expr_stmt|;
 name|clientConnectionManager
 operator|.
