@@ -175,6 +175,9 @@ Bug Fixes
 * SOLR-5867: OverseerCollectionProcessor isn't properly generating https urls in some
   cases. (Steve Davids via shalin)
 
+* SOLR-5866: UpdateShardHandler needs to use the system default scheme registry to
+  properly handle https via javax.net.ssl.* properties. (Steve Davids via shalin)
+
 Optimizations
 ----------------------
 * SOLR-1880: Distributed Search skips GET_FIELDS stage if EXECUTE_QUERY
